bug fix listing and reviews

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -19,7 +19,7 @@
         </div>
         <div class="mb-3">
             <lable for="image" class="form-lable">Image link</lable>
-            <input name="listing[image][url]" placeholder="enter image url/link" type="text" class="form-control">
+            <input name="listing[image]" placeholder="enter image url/link" type="text" class="form-control">
         </div>
 
         <div class="row">
