--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -20,7 +20,7 @@
 
     <div class="mb-3">
         <lable for="image" class="form-lable">Image link</lable>
-        <input name="listing[image][url]"  value="<%=listing.image.url %>"  type="text" class="form-control" required>
+        <input name="listing[image]"  value="<%=listing.image.url %>"  type="text" class="form-control" required>
        
         <div class="invalid-feedback">please enter a  valid link !</div>
     </div>
