add flash and sessions features in airbinb

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,8 +19,11 @@
 </head>
 <body>
     <%- include("../includes/navbar.ejs") %>
+
+   
     
     <div class="container">
+        <%- include("../includes/flash.ejs") %>
         <%- body %>
     </div>
     <%- include("../includes/footer.ejs") %>
