--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,25 +2,20 @@
 
 
 <div class="row mt-3">
-    <h1 class="col-6 offset-3">Signup for Wanderlust</h1>
+    <h1 class="col-6 offset-3">Login</h1>
     <div class="col-6 offset-3">
-        <form action="/signup" method="POST" class="needs-validation" novalidate>
+        <form action="/login" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
                 <lable for="username" class="form-lable">Username</lable>
                 <input name="username" type="text" id="username" class="form-control" required>
-                <div class="valid-feedback">looks good !</div>
             </div>
 
-            <div class="mb-3">
-                <lable for="email" class="form-lable">Email</lable>
-                <input name="email" type="email" id="email" class="form-control" required>
-            </div>
 
             <div class="mb-3">
                 <lable for="password" class="form-lable">Password</lable>
                 <input name="password" type="password" id="password" class="form-control" required>
             </div>
-            <button class="btn btn-success"> Signup</button>
+            <button class="btn btn-success"> Login</button>
         </form>
     </div>
  </div>
