--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,6 +15,18 @@
           <a class="nav-link" href="/listings/new">new Listing</a>
        
         </div>
+
+        <div class="navbar-nav ms-auto">
+          <% if(!currUser){ %>
+            <a class="nav-link"  href="/signup">Sign Up</a>
+            <a class="nav-link" href="/login">Log in</a>
+          <%} %>
+
+          <% if(currUser){ %>
+          <a class="nav-link" href="/logout">Log out</a>
+          <%} %>
+        </div>
+
       </div>
     </div>
   </nav>
