--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,18 +9,19 @@
 <div class="card col-6 offset-3 show-card listing-card">
             <img src="<%=listing.image.url %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-              <p class="card-text">
-                <!-- <b> <%= listing.title %>  </b> <br> -->
-             
-                <%=listing.description %>  <br>
-                &#8377;<%=listing.price.toLocaleString("en-IN") %> <br>
-                <%=listing.location %> <br>
-                <%=listing.country %> <br>
-            </p>
+              <p class="card-text"> Owned By <i><b><%= listing.owner.username %></i></b>   </p>
+              <p class="card-text">  <%=listing.description %>   </p>
+              <p class="card-text">      &#8377;<%=listing.price.toLocaleString("en-IN") %>  </p>
+              <p class="card-text"> <%=listing.location %>    </p>
+              <p class="card-text">   <%=listing.country %>   </p>
+
+               
+        
             </div> 
     </div>
 
     <br>
+    <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
     <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
     
@@ -28,8 +29,13 @@
         <BUTTON class="btn btn-dark  offset-5">DELETE</BUTTON>
     </form>
    </div>
+   <% }%>
+
 <div class="col-8 offset-3 mb-3">
     <hr>
+    <% if(currUser) { %>
+
+    
     <h4>Leave a Review</h4>
     <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
        <div class="mb-3 mt-3">
@@ -43,16 +49,17 @@
         <div class="invalid-feedback">Please submit some comments for review</div>
     </div>
     <button class="btn btn-outline-dark">Submit</button>
-    </form>
-
-    <hr>
+</form>
+<hr>
+    <% }%>
+  
 
     <p><b>All Rivewes</b></p>
    <div class="row">
     <% for(review of listing.reviews){%>
     <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
-            <h5 class="card-title">shubham</h5>
+            <h5 class="card-title">@<%= review.author.username %></h5>
             <p class="card-text"> <%=review.comment %></p>
             <p class="cart-text"><%= review.rating %>stars</p>
             <form class="mb-3" method="POST" action="/listings/<%=listing._id%>/reviews/<%= review._id %>?_method=DELETE">
