--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -20,7 +20,7 @@
 
     <div class="mb-3">
        original listing image <br>
-      <img src="<%=originalImageUrl %>">
+      <img src="<%=originalImageUrl %>" width="200px" style="filter:blur(2px)">
     </div>
 
     <div class="mb-3">
